hermetisation